--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   dio: ^5.4.0
   cached_network_image: ^3.3.0
-  fluttertoast: ^8.2.4
+  fluttertoast: 8.2.2
   json_annotation: ^4.8.1
   provider: ^5.0.0
 
