--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: 8.2.2
   json_annotation: ^4.8.1
   provider: ^5.0.0
+  package_info_plus: ^4.2.0
 
 
 dev_dependencies:
